--- a/1. 전이학습_llm.ipynb
+++ b/1. 전이학습_llm.ipynb
@@ -49,12 +49,153 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2be9259c-6f70-45e0-800e-9db33dab896d",
+   "cell_type": "markdown",
+   "id": "fb09e710-01bd-47a9-98ad-aa212c9c27e8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- 전이 학습을 적용하면 기존보다 모델의 학습 속도가 빨라지고 새로운 태스크를 더 잘 수행하는 경향이 있음"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9871fdd9-7f3d-439d-ac7e-12dbaefdd122",
+   "metadata": {},
+   "source": [
+    "- 따라서 최근 실무에서 널리 적용되는 방법이며, BERT(GPT비슷한것임) 나 GPT 등도 전이 학습이 적용되었음\n",
+    "\n",
+    "- 위 이미지에서 **사전 학습하는 태스크를 업스트림 태스크**라고 부르고, 전이 학습하는 태스크를 이와 대비된 개념으로 다운스트림 태스크 라고 부름\n",
+    "  \n",
+    "    - 업스트림 태스크는 다음 단어 맞히기 , 빈칸 채우기 등 대규모 말뭉치의 문맥을 이해하는 과제\n",
+    "    - 다운스트림 태스크는 문서 분류, 개체명 인식 등 우리가 풀고자 하는 자연어 처리의 구체적인 문제들\n",
+    "      \n",
+    "- 업스트림 태스크를 학습하는 과정을 사전학습(pretrain) 이라고 부름"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4743ce1-6427-4e5a-b33c-88268732ce68",
+   "metadata": {},
+   "source": [
+    "## 업스트림 태스크\n",
+    "\n",
+    "- 자연어의 풍부한 문맥(context)를 모델에 내재화하고 이 모델을 다양한 다운스트림 태스크에 적용해 성능을 끌어올림\n",
+    "\n",
+    "- 대표적으로 업스트림 태스크 중 하나가 다음 단어 맞히기\n",
+    "\n",
+    "    - GPT 계열 모델이 다음 단어 맞히기로 사전 학습을 수행함\n",
+    "    \n",
+    "        - 예) \"티끌모아\" 라는 문맥이 주어졌을 시, 학습 데이터에 \"티끌모아태산\" 이라는 문구가 많다고 하면 이를 바탕으로 다음에 올 단어를 \"태산\" 으로 분류하도록 학습함\n",
+    "     \n",
+    "        - 모델이 대규모 말뭉치를 가지고 이런 과정을 반복 수행하면 이전 문맥을 고려했을 때, 어떠 단어가 그 다음에 오는 것이 자연스러운지 학습함\n",
+    "     \n",
+    "        - 해당 언어의 풍부한 문맥을 이해\n",
+    "     \n",
+    "- 다음 단어 맞히기 등의 업스트림 태스크를 수행한 모델을 언어 모델 (language model) 이라고 함\n",
+    "\n",
+    "- 또 다른 업스트림 태스크로는 빈칸 채우기가 있음\n",
+    "\n",
+    "    - BERT 계열 모델이 빈칸 채우기로 사전 학습을 수행함\n",
+    "        - 예) \"티끌 00 태산\" 형태로 빈칸을 만들고 해당 위치에 들어갈 단어가 무엇일지 맞히는 과정으로 학습\n",
+    "\n",
+    "    - 모델이 많은 양의 데이터를 가지고 빈칸 채우기를 반복학습하면 앞뒤 문맥을 보고 빈칸에 적합한 단어 알 수 있음\n",
+    " \n",
+    "    - 이 태스크를 수행한 모델 역시 언어 모델과 마찬가지로 해당 언의 풍부한 문맥을 내재화할 수 있음\n",
+    "        - 빈칸 채우기로 업스트림 태스크를 수행한 모델을 **마스크 언어 모델** 이라고 함\n",
+    " \n",
+    "- 업스트림 태스크에는 주로 뉴스, 웹 문서, 백과사전 등의 데이터를 이용하여 다량의 학습 데이터를 확보\n",
+    "\n",
+    "- 위와 같이 데이터 내에서 정답을 만들고 이를 바탕으로 모델을 학습하는 방법을 자기 지도 학습(self-supervised learning) 이라고 함"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38191e79-f0e0-457e-a287-aec33a70a079",
+   "metadata": {},
+   "source": [
+    "## 다운스트림 태스크\n",
+    "\n",
+    "- 모델을 업스트림 태스크로 사전 학습한 이유는 다운스트림 태스크를 잘 하기 위해서\n",
+    "\n",
+    "- 일반적으로 다운스트림 태스크는 **사전 학습을 마친 모델을 구조 변경 없이 그대로 사용하거나** 여기에 태스크 모듈을 덧붙인 형태로 수행(빈칸맞추기일경우)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d00b2c1f-bc07-444f-bac0-553725bcdb92",
+   "metadata": {},
+   "source": [
+    "### 파인튜닝(fine-tuning)\n",
+    "\n",
+    "- **사전 학습을 마친 모델**을 다운스트림 태스크에 맞게 **업데이트** 하는 기법"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da74cd97-ac9d-4cda-8248-ae5f76e2029e",
+   "metadata": {},
+   "source": [
+    "#### 다운스트림 태스크의 예시\n",
+    "\n",
+    "- 문서 분류\n",
+    "    - 자연어 데이터를 입력 받아 해당 입력 데이터가 어떤 범주에 속하는지 그 확률값을 반환\n",
+    " \n",
+    "- 자연어 추론\n",
+    "    - 문장 2개를 입력 받아 두 문자 사이의 관계가 참, 거짓, 중립 등 어떤 범주인지 그 확률값을 반환\n",
+    " \n",
+    "- 개체명 인식\n",
+    "\n",
+    "    - 자연어를 입력받아 단어 별로 기관명, 인명, 지명 등 어떤 개체명범주에 속하느느지 그 화률값을 반환\n",
+    " \n",
+    "- 질의 응답(=기계독해)\n",
+    "    - 자연어(질문 + 지문)를 입력받아 각 단어가 정답의 시작일 확률값과 끝일 확률값을 반환\n",
+    " \n",
+    "- 문장 생성\n",
+    "    - GPT 계열 언어 모델이 문장 생성 모델로 널리 쓰임\n",
+    " \n",
+    "    - 자연어를 입력받아 어휘 전체에 대한 확률값을 반환\n",
+    "        - 이 확률값은 입력된 문장 다음에 올 단어로 얼마나 적절한지를 나타내는 점수"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5eb4fe2-8bc6-42f2-ab5a-f89515cef4d9",
+   "metadata": {},
+   "source": [
+    "# 학습 파이프라인 \n",
+    "\n",
+    "\n",
+    "1. 각종 설정값 설정\n",
+    "    - 어떤 사전 학습 모델을 사용할지, 학습에 사용할 데이터는 무엇인지, 학습 결과는 어디에 저장할지 등\n",
+    "  \n",
+    "    - 하이퍼 파라미터(러닝레이트, 배치 크기 등)도 미리 설정해두어야함\n",
+    "  \n",
+    "      \n",
+    "2. 데이터 준비\n",
+    "\n",
+    "3. 사전 학습 모델준비\n",
+    "    - 대규모 말뭉치를 활용한 사전 학습에는 많은 자원이 필요함\n",
+    "        - 하지만 많은 기업과 개인이 사전학습을 마친 모델을 자유롭게 사용할 수 있도록 공개하고 있음\n",
+    "    - 특히 huggingface(허깅페이스)에서 많이 공유됨\n",
+    "      \n",
+    "4. 토크나이저 준비\n",
+    "    - 자연어 처리 모델의 입력은 보통 토큰(token)\n",
+    "    - 문장을 토큰 시퀀스(token sequence)로 분석하는 과정을 토큰화(tokenization)\n",
+    "    - 토큰화를 수행하는 프로그램을 토크나이저(tokenizer) 라고 함\n",
+    "      \n",
+    "5. 데이터 로더 준비\n",
+    "    \n",
+    "6. 태스크 정의\n",
+    "\n",
+    "7. 모델 학습"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "214fa9c2-d492-4d6c-aa44-4f224248b84e",
+   "metadata": {},
+   "source": [
+    "- 당뇨 라떼 : 모카 라떼 + 바닐라 라떼 "
+   ]
   }
  ],
  "metadata": {
